--- a/views/login.jade
+++ b/views/login.jade
@@ -1,47 +1,13 @@
 extends layout
-//block content
-    form(class="form-inline", role="form", id='#{nonce}', method="post")
-        div(class="form-group")
-            label(class="sr-only") User Name
-            input(type="email", class="form-control", id="inputEmail", placeholder="Enter username")
-
-        div(class="form-group")
-            label(class="sr-only") Password
-            input(type="password", class="form-control", id="inputPassword", placeholder="Password")
-    button(type="submit", class="btn btn-default", text='Sign in')'Sign In'
-    button(class='btn btn-primary', name='cancel_post', onclick='window.history.back()') Cancel
+link(rel='stylesheet', href='/css/signin.css')
 
 block content
-    h1 Welcome to #{title}
-        div(class="navbar navbar-inverse navbar-fixed-top")
-            div(class="navbar-inner")
-                div(class="container")
-                    button(type="button" class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse")
-                        span(class="icon-bar")
-                        span(class="icon-bar")
-                        span(class="icon-bar")
-                    a(class="brand", href="#") #{title}
-                        div(class="nav-collapse collapse")
-                            ul(class="nav")
-                                li
-                                    a(href="/") Home
-                                li(class="active")
-                                    a(href="/login") Login
-                                li
-                                    a(href="/newpost") New Post
-    h1 Login
-    br
-    form(role='form', action="/login",method="post", style='max-width: 300px;', id='#{nonce}')
-        .form-group
-            h3 User Name
-        .form-group
-            input.form-control(type='text', name="username", placeholder='Enter Username')
-        .form-group
-            h3 Password
-        .form-group
-            input.form-control(type='password', name="password", placeholder='Password')
-        button.btn.btn-default(type='submit') Submit
-        nbsp
-        a(href='/')
-            button.btn.btn-primary(type="button") Cancel
+   div(class='container-fluid')
+      div(class="row col-md-6 col-md-offset-3")
+            form(role='form', action="/login",method="post", class="form-signin", id='#{nonce}')
+                h2(class='form-signin-heading') Please Sign In
+                input(type='text', name="username",class='form-control' ,placeholder='Enter Username', required, autofocus)
+                input(type='password', name='password',class='form-control'  ,placeholder='Password')
+                button(class="btn btn-primary btn-block", type='submit') Sign In
+
 
